Cleaned up formatting of base gameboard so that the gameboard no longer overlaps with the navbar

--- a/frontend/src/components/Gamepage.css
+++ b/frontend/src/components/Gamepage.css
@@ -149,7 +149,6 @@ top: 15px;
 }
 
 #Gamegrid {
-position:absolute;
 bottom: 240px;
 margin-right: auto;
 margin-left: auto;
