--- a/frontend/src/components/Square.css
+++ b/frontend/src/components/Square.css
@@ -1,6 +1,6 @@
 .square {
-    height: 70px;
-    width: 70px;
+    height: 65px;
+    width: 65px;
     border: 2px solid #bebebe;
     color: Black;
     background-color:white;
